--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -113,12 +113,15 @@ table {
 
 th,
 td {
+    vertical-align: middle;
     padding: 12px 15px;
-    text-align: left;
+    text-align: center;
 }
 
 th {
+    padding: 12px 15px;
     background-color: var(--primary);
+    text-align: center;
 }
 
 tr:nth-child(even) {
