--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -56,7 +56,8 @@
         </table>
     </div>
 
-    <script src="static/dashboard.js"></script>
+    <script src="{{ url_for('static', filename='dashboard.js') }}"></script>
+
 
 
 </body>
