removed manual blocking

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -48,7 +48,7 @@
                     <th>Status</th>
                     <th>Suspicion Score</th>
                     <th>Time Blocked</th>
-                    <th>Action</th>
+                    <th>Time Until Unblock</th>
                 </tr>
             </thead>
             <tbody id="table-body">
